# wp-dotcom-exit

./: pyproject.toml
wp-dotcom-exit/: README.md  main.py
